# MacroNova

./: .gitignore  42-macronova.rules  ARCHITECTURE.md  Cargo.toml  MOUSE.md  README.md  SCRIPTING.md  macronova.service
.github/workflows/: release.yml
Guides/: GUIDES.md  Logitech_G502X_Lightspeed.md
assets/: card.xcf
crates/macronova-core/: Cargo.toml
crates/macronova-core/src/: config.rs  lib.rs
crates/macronova-core/src/device/: evdev_input.rs  hidraw_input.rs  mod.rs
crates/macronova-core/src/device/hidpp/: base.rs  constants.rs  features.rs  mod.rs  reprog.rs
crates/macronova-core/src/device/logitech/: discovery.rs  mod.rs
crates/macronova-core/src/platform/: input.rs  mod.rs
crates/macronova-daemon/: Cargo.toml
crates/macronova-daemon/src/: main.rs
crates/macronova-daemon/src/engine/: rhai.rs
crates/macronova-daemon/src/input/: hidpp_reader.rs  mod.rs  uinput.rs  xtest.rs
crates/macronova-daemon/src/input/platform/: mod.rs
crates/macronova-daemon/src/input/platform/linux/: injector.rs  mod.rs
crates/macronova-daemon/src/input/platform/macos/: injector.rs  mod.rs
crates/macronova-daemon/src/input/platform/windows/: injector.rs  mod.rs
crates/macronova-gui/: Cargo.toml
crates/macronova-gui/src/: app.rs  main.rs
crates/macronova-gui/src/views/: bindings.rs  daemon.rs  devices.rs  editor.rs  mod.rs  settings.rs
macros/: click_repeat.rhai  dpi_announce.rhai  redo.rhai  undo.rhai
publish/config/: example.toml
publish/config/macros/: media_playpause.rhai  move_abs_example.rhai  move_rel_example.rhai  sniper_hold.rhai  spam_lmb.rhai  spam_rmb.rhai  spam_space.rhai
publish/linux/: build-release.sh  install-macronova.sh  macronova-gui.desktop  macronova.service
