[package]
name = "macronova-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hidapi = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"
wayland-client = "0.31"
