[package]
name = "macronova-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "macronova-daemon"
path = "src/main.rs"

[[bin]]
name = "hidraw-sniffer"
path = "src/bin/hidraw_sniffer.rs"

[[bin]]
name = "evdev-sniffer"
path = "src/bin/evdev_sniffer.rs"

[dependencies]
macronova-core = { path = "../macronova-core" }
hidapi = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rhai = { workspace = true }
notify = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { workspace = true }
libc = { workspace = true }
